--- a/novoTeste/platforms/android/res/values/strings.xml
+++ b/novoTeste/platforms/android/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">HelloCordova</string>
     <string name="launcher_name">@string/app_name</string>
     <string name="activity_name">@string/launcher_name</string>
+    <string name="facebook_app_id">152479708206968</string>
 </resources>
